{
    "name": "ProjectIlluminaIA",
    "maps": [
        {
            "name": "Player",
            "id": "bdd4e6b9-b4df-42a4-9db4-0c6a25909199",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "b8c7df4e-c10e-4cd5-a804-e31c6c8e9557",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "3686cccc-5511-4584-b2b5-7f513fcf935b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0f3857bf-3fb4-41a1-8bba-3b1a9499a8ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.05,pressPoint=0.01),Press(pressPoint=0.01)"
                },
                {
                    "name": "LookAround",
                    "type": "Value",
                    "id": "7a7e2075-6497-41cc-ac87-8f6e177c57fb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Heal",
                    "type": "Button",
                    "id": "56df61da-cf64-44a7-8f44-d7d06446f530",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MeleeAttack",
                    "type": "Button",
                    "id": "e6f32056-33df-40f4-b88c-80b99bb4cef3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MalayaAbility",
                    "type": "Button",
                    "id": "7d563925-8d7e-4ce7-8207-b342cd79294f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectMalayaAbility",
                    "type": "Button",
                    "id": "788e782e-2a15-4167-abf4-7b99325b55c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PookaAbility",
                    "type": "Button",
                    "id": "961bd260-9938-45d9-9de6-da8feec2ed17",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectPookaAbility",
                    "type": "Button",
                    "id": "13d81b56-4612-4d51-825e-34a05bbb5dcc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonNorth",
                    "type": "Button",
                    "id": "a62645fa-0df3-4ce3-a79f-99cea562c4d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "56acec0a-e678-46c9-9fce-e7d8f6e30180",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftStickPress",
                    "type": "Button",
                    "id": "83d9419f-20d9-438e-a8ed-20192dbfc137",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightStickPress",
                    "type": "Button",
                    "id": "3b2cab24-2888-4343-b10b-409f49a7d164",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "98f26e3e-249a-4c34-805f-8130a4e7f127",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50389855-fd8a-4f07-9e04-65c24fa9c0cd",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7dedb76e-65c3-40f4-b3d8-38105945c55e",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ab15270-f442-4bf8-918a-de11c3e85e68",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookAround",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e6427f8-3435-4bf9-92c3-1b0774dc4324",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Heal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c624f646-8d5e-4a31-be0b-edda6e885d9e",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MeleeAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "564e30e8-3843-4dbc-98b7-5faac8e9aa9d",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MalayaAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e88674e2-901c-409f-a51b-99df434b1e70",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectMalayaAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36b1fd7d-7a1c-46b3-9f40-2f5cccadbe81",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PookaAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "01a9e356-8bf6-462d-9255-c48c52c9d125",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectPookaAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39176342-9767-4ded-88fb-c152125bbe69",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonNorth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f68649f-47b5-4673-a4a3-a9f84990bcf4",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c1920a1-f88e-4e5f-93f0-0a635ec68745",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStickPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6bfcc8dc-1bd5-412d-b68e-36598f09343c",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStickPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}